--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
